--- a/src/App.css
+++ b/src/App.css
@@ -79,9 +79,6 @@ div.container-Input{
 
 /*Table*/
 div.container-Mesa{
-  margin: 80px auto 0;
-  max-width: 550px;
-  width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -90,15 +87,77 @@ div.container-Mesa{
   background: #fff4c4;
   margin-top: auto;
   border-radius: 4px;
-  padding: 30px;
-  max-height: 100vh;
 }
 
-.container-Mesa form input{
-  width: 30%;
-  height: 4vh;
-  font-size: 20px;
-  position: relative;
+@media screen and (max-width: 600px){
+  .container-connection{
+    display: none;
+}
+  div#Roll{
+    width: 95vw;
+    height: 85vh;
+  }
+  div.container-Mesa{
+    position: absolute;
+    left: 1vw;
+    top: 1vh;
+    width: 98vw;
+    height: 90vh;
+  }
+
+  .container-Mesa form input{
+    width: 13vh;
+    height: 4vh;
+    font-size: 20px;
+    position: relative;
+  }
+}
+
+@media screen and (max-width: 1007px) and (min-width: 601px){
+  .container-connection{
+    left: 0px;
+}
+  div#Roll{
+    width: 65vw;
+    height: 75vh;
+  }
+  div.container-Mesa{
+    position: absolute;
+    right: 5vw;
+    top: 1vh;
+    width: 70vw;
+    height: 80vh;
+  }
+
+  .container-Mesa form input{
+    width: 30%;
+    height: 4vh;
+    font-size: 20px;
+    position: relative;
+  }
+}
+
+@media (min-width: 1008px){
+  div#Roll{
+    min-height: 600px;
+    width: 100%;
+    max-height: 50vh;
+  }
+
+  div.container-Mesa{
+    margin: 80px auto 0;
+    max-width: 550px;
+    width: 100%;
+    padding: 30px;
+    max-height: 100vh;
+  }
+
+  .container-Mesa form input{
+    width: 30%;
+    height: 4vh;
+    font-size: 20px;
+    position: relative;
+  }
 }
 
 .container-connection{
@@ -122,10 +181,7 @@ div.container-Mesa{
 }
 
 div#Roll{
-  min-height: 600px;
-  width: 100%;
   background: #fff;
-  max-height: 50vh;
   overflow-y: scroll;
   overscroll-behavior-y: contain;
   scroll-snap-type: y mandatory;
