--- a/src/App.css
+++ b/src/App.css
@@ -94,7 +94,8 @@ div.container-Mesa{
     display: none;
 }
   div#Roll{
-    width: 95vw;
+    margin-top: 1vh;
+    width: 94vw;
     height: 85vh;
   }
   div.container-Mesa{
@@ -110,6 +111,14 @@ div.container-Mesa{
     height: 4vh;
     font-size: 20px;
     position: relative;
+  }
+
+  #Roll p{
+    margin-left: 3vw;
+    margin-top: 2vh;
+    font-size: 40px;
+    margin-bottom: 10px;
+    border-bottom: rgb(248, 171, 141) solid 1px;
   }
 }
 
@@ -135,6 +144,12 @@ div.container-Mesa{
     font-size: 20px;
     position: relative;
   }
+
+  #Roll p{
+    font-size: 40px;
+    margin-bottom: 10px;
+    border-bottom: rgb(248, 171, 141) solid 1px;
+  }
 }
 
 @media (min-width: 1008px){
@@ -157,6 +172,12 @@ div.container-Mesa{
     height: 4vh;
     font-size: 20px;
     position: relative;
+  }
+
+  #Roll p{
+    font-size: 40px;
+    margin-bottom: 10px;
+    border-bottom: rgb(248, 171, 141) solid 1px;
   }
 }
 
@@ -191,12 +212,6 @@ div#Roll{
   scroll-snap-align: end;
 }
 
-
-#Roll p{
-  font-size: 40px;
-  margin-bottom: 10px;
-  border-bottom: rgb(248, 171, 141) solid 1px;
-}
 #Roll h4{
   font-size: 25px;
   margin-bottom: 15px;
