--- a/src/App.css
+++ b/src/App.css
@@ -19,7 +19,7 @@ body{
 .btn{
   border: 0;
   border-radius: 2px;
-  width: 94%;
+  width: 100%;
   height: 42px;
   padding: 0 16px;
   font-size: 16px;
@@ -102,6 +102,15 @@ div.container-Mesa{
 }
 
 @media screen and (max-width: 600px){
+
+  .newTableBtn{
+    width: 91.5%;
+  }
+
+  .tableJoin svg{
+    margin-right: 0.5vw;
+  }
+
   .container-connection{
     z-index: 9;
     right: 0;
@@ -172,6 +181,10 @@ div.container-Mesa{
 }
 
 @media screen and (max-width: 1007px) and (min-width: 601px){
+  .newTableBtn{
+    width: 94%;
+  }
+
   .container-connection{
     left: 0px;
     width: 20%;
@@ -204,6 +217,10 @@ div.container-Mesa{
 }
 
 @media (min-width: 1008px){
+
+  .newTableBtn{
+    width: 94%;
+  }
 
   .container-connection{
     width: 20%;
