--- a/src/App.css
+++ b/src/App.css
@@ -44,7 +44,7 @@ div.container-Input{
   color: #606060;
   font-size: 20px;
   background: #fff4c4;
-
+  margin: auto;
   width: 100%;
   background: #fff;
   margin-top: 50px;
@@ -217,7 +217,6 @@ div.container-Mesa{
 }
 
 @media (min-width: 1008px){
-
   .newTableBtn{
     width: 94%;
   }
@@ -234,7 +233,7 @@ div.container-Mesa{
   }
 
   div.container-Mesa{
-    margin: 80px auto 0;
+    margin: auto auto 0;
     max-width: 550px;
     width: 100%;
     padding: 30px;
