--- a/src/App.css
+++ b/src/App.css
@@ -16,7 +16,25 @@ body{
   -webkit-font-smoothing: antialiased !important;
 }
 
+.dontDisplay{
+  display: none;
+}
+
 .btn{
+  border: 0;
+  border-radius: 2px;
+  width: 100%;
+  height: 42px;
+  padding: 0 16px;
+  margin-bottom: 16.1px;
+  font-size: 16px;
+  font-weight: bold;
+  background: green;
+  color: #fff;
+  cursor: pointer;
+}
+
+.btnCliked{
   border: 0;
   border-radius: 2px;
   width: 100%;
@@ -24,9 +42,12 @@ body{
   padding: 0 16px;
   font-size: 16px;
   font-weight: bold;
-  background: green;
-  color: #fff;
-  cursor: pointer;
+  background: #606060;
+}
+.btnCliked img{
+  width: 17%;
+  margin-top: -1vh;
+  
 }
 
 .btn:hover{
@@ -50,6 +71,7 @@ div.container-Input{
   margin-top: 50px;
   border-radius: 4px;
   padding: 30px;
+  padding-bottom: 0;
 }
 
 .container-Input form input{
